infra/security.tf
resource "aws_security_group" "ecs_sg" {
  name        = "${var.service_name}-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 7860
    to_port     = 7860
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
